# GlNeuralNet

./: .gitignore  CMakeLists.txt
src/cpp/ai/: main_propagation.cpp  main_rand_training.cpp  main_simple_compute.cpp  main_training.cpp  min_max_function_ai.cpp
src/cpp/ai/gl/: Shader.cpp  Shader.h
src/cpp/ai/nn/: Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h
src/cpp/ai/utils/: DatasetLoader.cpp  DatasetLoader.h  SetupUtil.cpp  SetupUtil.h
src/dart/: simple_neuralnet_matrices.dart
src/shaders/: activation.comp  elementwise.comp  matmul.comp  matmul_transpose_A.comp  outer_product.comp  sgd_update.comp
